syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sweettemptation.grpc";
option java_outer_classname = "TicketProto";

service TicketService {
  rpc GenerarTicket (TicketRequest) returns (TicketResponse);
}

message TicketRequest {
  int32 idPedido = 1;
}

message TicketResponse {
  bytes pdf = 1;
  string fileName = 2;
}